# forge.ue

./: $null  .env.example  .gitignore  PRIVATE_LICENSE.md  QUICKSTART.md  README.md  architecture.md  architecture2.md  codecriticlayer3phase1.md  codecriticlayer3phase10.md  codecriticlayer3phase2.md  codecriticlayer3phase3.md  codecriticlayer3phase4.md  codecriticlayer3phase5.md  codecriticlayer3phase6.md  codecriticlayer3phase7.md  codecriticlayer3phase8.md  codecriticlayer3phase9.md  codingschedule.md  countguide.md  critic_final.md  critic_final2.md  critic_final3.md  critic_prebuild.md  critic_prebuild2.md  dependency_graph.md  dependency_graph2.md  docker-compose.yml  execution_plan.md  file_manifest.md  file_manifest2.md  forgeue.md  module_dependencies.md  module_dependencies2.md  pyproject.toml  requirements-dev.txt  requirements.md  requirements.txt  requirements2.md  structure_confirmed.md  (+4 more)
ai/: __init__.py  architect_agent.py  repair_loop.py  test_agent.py
contracts/: __init__.py  api.yaml
dashboard/: index.html  package.json
engine/: __init__.py  blueprint_generator.py  brief_parser.py  build_runner.py  cpp_generator.py  learning_store.py  package_agent.py  platform_guards.py  project_scaffolder.py  store_agent.py  ue5_scanner.py
server/: __init__.py  main.py
templates/: __init__.py
tests/: __init__.py  conftest.py  test_architect_agent.py  test_blueprint_generator.py  test_build_runner.py  test_cpp_generator.py  test_dependency_graph.py  test_module_dependencies.py  test_platform_guards.py  test_repair_loop.py
wolf.beast/: 1179tokens_token_manifest.json  14400tokens_layer1sys_arch.html  14400tokens_layer1sys_arch.json  critic_final.json  final_count.json  layer1sys_arch.json  (+12 more)
(+198 files in other folders)
